examples/test/testpolicy10939.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10939
  namespace: namespace212
spec:
  podSelector:
    matchLabels:
      key36: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value42
      podSelector:
        matchLabels:
          key31: value33
          key1: value31
          key3: value42
